Bug 437746 - LSP Quick Fix Keyboard Shortcut
Summary: LSP Quick Fix Keyboard Shortcut
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.04.1
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-27 18:21 UTC by Billy Brawner
Modified: 2021-05-29 21:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Billy Brawner 2021-05-27 18:21:10 UTC
It would be nice to have a keyboard shortcut to quickly view/apply LSP code actions, much like CTRL + . for VS Code. Currently one has to open the LSP Client tab at the bottom, then find the error in the Diagnostics tab, expand the error, and double click the quick fix suggestion.
Comment 1 Bug Janitor Service 2021-05-29 21:16:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/421
Comment 2 Mark Nauwelaerts 2021-05-29 21:38:23 UTC
Git commit c095d67e61e1a0a692643372d63b2f49a3aedbf2 by Mark Nauwelaerts.
Committed on 29/05/2021 at 21:00.
Pushed by mnauwelaerts into branch 'master'.

lspclient: add action to request and apply quick fix code action

M  +42   -3    addons/lspclient/lspclientpluginview.cpp
M  +2    -1    addons/lspclient/ui.rc

https://invent.kde.org/utilities/kate/commit/c095d67e61e1a0a692643372d63b2f49a3aedbf2