lspclient: add action to request and apply quick fix code action

BUG: 437746